<resources>
    <string name="app_name">MySalary</string>
    <string name="selected_language">English</string>
    <string name="firstName">First Name</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="userName">UserName</string>
    <string name="lastName">Last Name</string>
    <string name="enterMail">Enter Mail</string>
    <string name="enterUserName">Enter User Name</string>
    <string name="x">X</string>
    <string name="cleanAll">Clear</string>
    <string name="enterFirstName">Enter First Name</string>
    <string name="save">Save</string>
    <string name="worker">Worker</string>
    <string name="enterLastName">Enter Last Name</string>
    <string name="boss">Boss</string>
    <string name="verifyPassword">Verify Password</string>
    <string name="register">Register</string>
    <string name="server_client_id">30652896089-12272i8lgqvqlbb6ber8rs16v2kig76j.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="google_sign_in">Google Sign-In</string>
    <string name="forgot_the_password">Forgot The Password</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="total_hours">Total Hours</string>
    <string name="sum_payment">Sum Payment</string>
    <string name="add_shift">Add New Shift</string>
    <string name="add_job">Add New Job</string>
    <string name="logout">Logout</string>
    <string name="job_name">Job Name</string>
    <string name="hour_pay">Hour Pay</string>
    <string name="boss_mail">Boss Mail</string>
    <string name="start_date">Start Date dd/mm/yyyy</string>
    <string name="end_date">End Date dd/mm/yyyy</string>
    <string name="shift_added_successfully">Shift Added Successfully</string>
    <string name="job_added_success">Job Added Successfully</string>
    <string name="bye">GoodBye!</string>
    <string name="user_name_used">UserName is already in use</string>
    <string name="choose_user_type">Please Choose User Type</string>
    <string name="user_name_short">UserName is too short</string>
    <string name="mail_incorrect">mail address is incorrect</string>
    <string name="invalid_first_name">Invalid first name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="password_invalid">password invalid, length should be 6 chars, to contain Upper cases,chars and numbers</string>
    <string name="verification_wrong">Password Verification doesnt match</string>
    <string name="register_success">Registered Successfully</string>
    <string name="register_failed">Register failed, mail already exists</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="login_failed">Login failed</string>
    <string name="thanks_forgot">Thank you, reset link sent to your mail</string>
    <string name="mail_not_exist">mail doesn\'t exists</string>
    <string name="search">Search</string>
    <string name="worker_mail">Worker Mail</string>
    <string name="thank_you">Thank You</string>
    <string name="invalid_details">Invalid Details</string>
    <string name="user_added">Hello, you have another worker added</string>
    <string name="boss_mail_wrong">the boss mail doesn\'t exist</string>
    <string name="invalid_salary">the payment is invalid</string>
    <string name="invalid_job">job name is invalid</string>
    <string name="the_user">The user</string>
    <string name="added_you_boss">added you as his employer at the job</string>
    <string name="in_salary">in hourly pay of</string>
    <string name="per_hour">per hour</string>
    <string name="edit_shift">Edit shift</string>
    <string name="delete_shift">Delete Shift</string>
    <string name="sure_delete">Are you sure you want to delete?</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Confirmation">Confirmation</string>
    <string name="start_live">Start</string>
    <string name="end_live">End</string>
    <string name="start_live_shift">Start Shift</string>
    <string name="live_shift_started">Shift Started</string>
    <string name="active_shift">Active</string>
    <string name="live_shift_ended">Shift ended</string>
    <string name="working_now">      Working now</string>
</resources>