<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_shift"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job_name"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/editShiftName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        android:inputType="date"
        android:imeOptions="actionNext"
        android:id="@+id/editShiftStartDate"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_time"
        android:inputType="time"
        android:imeOptions="actionNext"
        android:id="@+id/editShiftStartTime"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        android:inputType="date"
        android:imeOptions="actionNext"
        android:id="@+id/editShiftEndDate"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_time"
        android:inputType="time"
        android:imeOptions="actionNext"
        android:id="@+id/editShiftEndTime"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/save"
        android:textColor="@color/white"
        android:background="@color/design_default_color_primary"
        android:id="@+id/btnNewShiftSave"/>
</LinearLayout>