<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/start_live_shift"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <AutoCompleteTextView
        android:id="@+id/editLiveShiftName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="0"
        android:hint="@string/job_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:text="" />

    <Button
        android:id="@+id/btnDialogLiveShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/design_default_color_primary"
        android:text="@string/start_live"
        android:textColor="@color/white" />
</LinearLayout>